--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "body-parser": "^1.19.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.52",
